Fix: Added space between button and field in new.html

--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col">
             <label for="id">ID</label>
-            <input id="id" type="text" class="form-control" placeholder="Oscar Id" name="id">
+            <input id="id" type="text" class="form-control" placeholder="Oscar ID" name="id">
         </div>
     </div>
 
@@ -29,6 +29,7 @@
             <input id="movie" type="text" class="form-control" placeholder="Name of the Movie" name="movie">
         </div>
     </div>
+    <br>
     <button type="submit" class="btn btn-success">Success</button>
 
 </form>
